
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/help_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/help_welcome"
                android:textColor="#52CC29"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/help_intro"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/help_intro"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/help_app"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/help_app"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/help_tips"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/help_tips"
                android:textColor="#52CC29"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/help_auto_login"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/help_auto_login"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/help_edit_delete"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/help_edit_delete"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/help_pass"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/help_pass"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/help_conntact"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/help_contact"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/help_thanks"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/help_thanks"
                android:textColor="#52CC29" />

            <TextView
                android:id="@+id/help_outro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:text="@string/help_outro"
                android:textColor="#52CC29" />

            <ImageView
                android:id="@+id/kiwi"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="right"
                android:layout_weight="0.21"
                android:contentDescription="@string/welcome_picture"
                android:src="@drawable/kiwi_logo" />
        </LinearLayout>

    </ScrollView>
