<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    android:gravity="left"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/icon_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/icon_service_name"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/icon_credentials"
        android:src="@drawable/tag_icon" />

    <EditText
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_service"
        android:layout_alignTop="@+id/icon_credentials"
        android:background="#000000"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical"
        android:hint="@string/description"
        android:inputType="textMultiLine|none" />

    <EditText
        android:id="@+id/txt_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_description"
        android:layout_marginRight="36dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/add_service"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_service"
        android:layout_alignRight="@+id/txt_service"
        android:layout_below="@+id/txt_service"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/add_username_or_email"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_username"
        android:layout_alignRight="@+id/txt_username"
        android:layout_below="@+id/txt_username"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/add_password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_password"
        android:layout_alignRight="@+id/txt_password"
        android:layout_below="@+id/txt_password"
        android:layout_marginTop="14dp"
        android:text="@string/save_credentials_button" />

    <ImageView
        android:id="@+id/icon_service_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_service"
        android:layout_toLeftOf="@+id/txt_service"
        android:layout_marginRight="20sp"
        android:src="@drawable/service_name_icon"
        android:contentDescription="@+id/icon_service_name" />

    <ImageView
        android:id="@+id/icon_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_username"
        android:layout_toLeftOf="@+id/txt_username"
        android:layout_marginRight="20sp"
        android:src="@drawable/user_icon"
        android:contentDescription="@+id/icon_username" />

    <ImageView
        android:id="@+id/icon_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icon_username"
        android:layout_alignTop="@+id/txt_password"
        android:layout_marginRight="20sp"
        android:contentDescription="@+id/icon_password"
        android:src="@drawable/pass_icon" />

    <ImageView
        android:id="@+id/icon_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icon_password"
        android:layout_alignTop="@+id/button_save"
        android:contentDescription="@+id/icon_save"
        android:layout_marginRight="10sp"
        android:src="@drawable/save_icon" />

    <CheckBox
        android:id="@+id/cbx_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icon_save"
        android:layout_below="@+id/button_save"
        android:layout_marginTop="17dp"
        android:text="@string/replicate_checkbox"
        android:textColor="#b4ffffff"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/star_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/icon_service_name"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txt_service"
        android:layout_toRightOf="@+id/txt_username"
        android:textColor="#52CC29"
        android:textSize="22sp"
        android:text="@string/star_string" />

</RelativeLayout>