<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >
 
    <EditText
        android:id="@+id/pin_textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/add_password"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pin_textbox"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/pin_textbox"
        android:layout_marginBottom="203dp"
        android:text="@string/login_button" >
    </Button>

    <ImageButton
        android:id="@+id/db_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="#000000"
        android:contentDescription="@string/db_reset"
        android:src="@drawable/db_reset" />

</RelativeLayout>